--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -7,7 +7,9 @@
   when: ansible_os_family == 'Debian'
 
 - name: Install Kibana.
-  package: name=kibana state=present
+  package:
+    name: "{{ kibana.package.name }}"
+    state: "{{ kibana.package.state }}"
 
 - name: debug
   debug:
@@ -44,6 +46,7 @@
 
 - name: Ensure Kibana is started and enabled at boot.
   service:
-    name: kibana
-    state: started
-    enabled: yes
+    name: "{{ kibana.service.name }}"
+    state: "{{ kibana.service.state }}"
+    enabled: "{{ kibana.service.enabled }}"
+  become: yes
