--- a/.travis.yml
+++ b/.travis.yml
@@ -2,11 +2,12 @@
 services: docker
 
 env:
-  - distro: centos7
-  - distro: centos6
+  # - distro: centos7
+  # - distro: centos6
   - distro: ubuntu1604
-  - distro: ubuntu1404
-  - distro: ubuntu1204
+  # - distro: ubuntu1404
+  # - distro: ubuntu1204
+  - distro: debian9
 
 script:
   # Configure test script so we can run extra tests after playbook is run.
