--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -31,7 +31,7 @@
   template:
     src: kibana.service.conf.j2
     dest: /etc/init/kibana.conf
-    mode: 764
+    mode: '0764'
   notify:
     - start kibana
   when: ansible_service_mgr is not defined or ansible_service_mgr != 'systemd'
